Bug 62395 - systemctl disable <service> does not work if the service file does not exist anymore
Summary: systemctl disable <service> does not work if the service file does not exist ...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-16 03:57 UTC by Konstantin
Modified: 2013-06-03 17:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Konstantin 2013-03-16 03:57:51 UTC
If a package (acpid in my case) providing a .service file is removed systemctl disable <service> fails because the symlink in /etc/systemd is broken.
Comment 1 Lennart Poettering 2013-03-18 13:26:59 UTC
This really is something that needs to be fixed in the packaging scripts: they should invoke "systemctl disable" before uninstalling proceeds.
Comment 2 Zbigniew Jedrzejewski-Szmek 2013-06-01 13:27:25 UTC
(In reply to comment #1)
> This really is something that needs to be fixed in the packaging scripts:
> they should invoke "systemctl disable" before uninstalling proceeds.

True, but 'systemctl disable' should delete the symlink anyway.
Comment 3 Zbigniew Jedrzejewski-Szmek 2013-06-03 17:57:10 UTC
systemctl will now remove dangling symlinks: http://cgit.freedesktop.org/systemd/systemd/commit/?id=02b9e96.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.